Finalized merging new card textures and colors.